change clipboard only enable-clipboard selected.

--- a/bar.html
+++ b/bar.html
@@ -17,6 +17,7 @@
       <div id="tool-box">
         <button id="move-bottom">bottom</button>
         <button id="move-top">top</button>
+        <input type="checkbox" id="enable-clipboard">clip</input>
       </div>
     </div>
     <div id="clear"></div>
